<resources>
    <string name="app_name">PingU</string>
    <string name="usuario">usuario</string>
    <string name="contraseña">contraseña</string>
    <string name="recordar_usuario">recordar usuario</string>
    <string name="mostar_contraseña">mostrar contaseña</string>
    <string name="recordar_credenciales">recordar credenciales</string>
    <string name="boton_login">¿Ya eres de casa? Entra 🔑</string>
    <string name="recondar_pass">¿has olvidado tu contraseña? Click aqui</string>
    <string name="boton_registro">¿Primera vez por aqui? Súmate 😎</string>
    <string name="txt_tb1">PingU - inicio</string>
    <string name="like">Me gusta</string>
    <string name="unlike">Ya no me gusta</string>
    <string name="eliminar">Eliminar</string>
    <string name="Responder">Responder</string>
    <string name="ver_respuestas">Ver Respuestas</string>
    <string name="btn_publica">¡Publica!</string>
    <string name="email">Correo electrónico</string>
    <string name="btnSolicitarContrasena">Enviar contraseña</string>
    <string name="txt_tb3">PingU - Recuperar contraseña</string>
    <string name="titulo_central_activity3">¿No recuerdas tu contraseña?</string>
    <string name="prApellido">Pirmer apellido</string>
    <string name="sgApellido">Segundo apellido</string>
    <string name="nombre">Nombre</string>
    <string name="alias">Alias</string>
    <string name="conf_pass">Confirmar contaseña</string>
    <string name="btn_desbloquearAcceso">Acceder 🔓</string>
    <string name="eslogan_tb4">Prepárate...esto empieza contigo 😉</string>
    <string name="txt_tb5">Mis publicaciones</string>
    <string name="pubilcadoBy">Publicado por</string>
    <string name="seguir">Seguir</string>
    <string name="dejarSeguir">Dejar de seguir</string>
    <string name="miPerfil">Mi perfil</string>
    <string name="seguidores">Seguidores</string>
    <string name="seguidos">Seguidos</string>
    <string name="usuarios">Usuarios</string>
    <string name="autor">Autor</string>
    <string name="perfilDeUsuario">Perfil de usuario</string>
    <string name="miembro_desde">Miembro desde</string>
    <string name="Actualizar_foto">Actualizar foto</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="biografia">Sobre mi</string>
    <string name="nContrasena">Nueva contraseña</string>
    <string name="guardarCambios">Guardar cambios</string>
    <string name="deleteCuenta">Eliminar cuenta</string>
</resources>