<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/btnPerfil"
        android:icon="@drawable/profilereverse"
        android:title="@string/miPerfil"
        app:showAsAction="never" />
    <item
        android:id="@+id/btnFollowers"
        android:icon="@drawable/followersreverse"
        android:title="@string/seguidores"
        app:showAsAction="never" />
    <item
        android:id="@+id/btnFollow"
        android:icon="@drawable/followreverse"
        android:title="@string/seguidos"
        app:showAsAction="never" />
    <item
        android:id="@+id/btnPosts"
        android:icon="@drawable/postsreverse"
        android:title="@string/txt_tb5"
        app:showAsAction="never" />
    <item
        android:id="@+id/publicar"
        android:icon="@drawable/publish"
        android:title="publicar"
        app:showAsAction="always" />
    <item
        android:id="@+id/cancelar"
        android:icon="@drawable/cancel"
        android:title="cancelar"
        app:showAsAction="always" />
    <item
        android:id="@+id/btnHome"
        android:icon="@drawable/homesf"
        android:title="Home"
        app:showAsAction="always" />
    <item
        android:id="@+id/btnUsuarios"
        android:title="@string/usuarios" />
</menu>