<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNombreUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pubilcadoBy"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAliasUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/alias" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnSeguir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seguir" />

            <Button
                android:id="@+id/btnDejarSeguir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dejarSeguir"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>