<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/corporativo1"
    tools:context=".MainActivity2perfil">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="137dp"
        android:layout_height="132dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/atlas" />

    <Button
        android:id="@+id/btnCambiaFoto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/Actualizar_foto"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/lblDesconectar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cerrarSesion"
        android:textColor="#F8030A"
        app:layout_constraintEnd_toEndOf="@+id/btnCambiaFoto"
        app:layout_constraintStart_toStartOf="@+id/btnCambiaFoto"
        app:layout_constraintTop_toBottomOf="@+id/btnCambiaFoto" />


    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/perfilDeUsuario"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtMiembrotext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/miembro_desde"
        app:layout_constraintStart_toStartOf="@+id/txtTitulo"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <TextView
        android:id="@+id/txtMiembro_respuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="01/01/2026"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtMiembrotext"
        app:layout_constraintStart_toEndOf="@+id/txtMiembrotext" />

    <TextView
        android:id="@+id/txtSeguidores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/seguidores"
        app:layout_constraintStart_toStartOf="@+id/txtMiembrotext"
        app:layout_constraintTop_toBottomOf="@+id/txtMiembrotext" />

    <TextView
        android:id="@+id/txtSeguidores_respuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="1000"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtSeguidores"
        app:layout_constraintStart_toEndOf="@+id/txtSeguidores" />

    <TextView
        android:id="@+id/txtSeguidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/seguidos"
        app:layout_constraintStart_toStartOf="@+id/txtSeguidores"
        app:layout_constraintTop_toBottomOf="@+id/txtSeguidores" />

    <TextView
        android:id="@+id/txtSeguidos_respuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="15"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtSeguidos"
        app:layout_constraintStart_toEndOf="@+id/txtSeguidos" />

    <TextView
        android:id="@+id/txtInsignia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Insignia:"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/btnCambiaFoto" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnCambiaFoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtInsignia"
        app:srcCompat="@drawable/logoqsf" />

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/nombre"
        app:layout_constraintStart_toStartOf="@+id/btnCambiaFoto"
        app:layout_constraintTop_toBottomOf="@+id/btnCambiaFoto" />

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="Nombre visible"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtNombre" />

    <TextView
        android:id="@+id/txtAlias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/alias"
        app:layout_constraintStart_toStartOf="@+id/txtNombre"
        app:layout_constraintTop_toBottomOf="@+id/edtNombre" />

    <TextView
        android:id="@+id/txtAlias_respuesta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="Atlas"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtAlias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtAlias" />

    <TextView
        android:id="@+id/txtCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@+id/txtAlias"
        app:layout_constraintTop_toBottomOf="@+id/txtAlias" />

    <TextView
        android:id="@+id/txtCorreo_respuesta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="correo@ejemplo.com"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtCorreo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtCorreo" />

    <ScrollView
        android:id="@+id/scrollDatosPerfil"
        android:layout_width="338dp"
        android:layout_height="333dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreo_respuesta">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtBiografia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biografia" />

            <EditText
                android:id="@+id/edtBiografia"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginTop="8dp"
                android:gravity="top|start"
                android:hint="Escribe tu biografía"
                android:inputType="textMultiLine"
                android:minLines="6" />

            <TextView
                android:id="@+id/txtNuevaPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/nContrasena" />

            <EditText
                android:id="@+id/edtNuevaPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="Nueva contraseña"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/txtRepetirPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/conf_pass" />

            <EditText
                android:id="@+id/edtRepetirPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="Repite la contraseña"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnGuardarCambios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="@string/guardarCambios" />

            <Button
                android:id="@+id/btnEliminarCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:backgroundTint="#F8030A"
                android:text="@string/deleteCuenta"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="@+id/lblDesconectar"
                app:layout_constraintStart_toStartOf="@+id/lblDesconectar"
                app:layout_constraintTop_toBottomOf="@+id/lblDesconectar" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>